--- a/package.json
+++ b/package.json
@@ -9,17 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.23.5",
+    "@hookform/resolvers": "^3.3.4",
+    "@prisma/client": "^5.13.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.12.7",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
-    "autoprefixer": "10.4.19",
+    "axios": "^1.6.8",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.2.3",
-    "next": "14.2.3",
-    "postcss": "8.4.38",
+    "eslint-config-next": "13.4.12",
+    "lucide-react": "^0.376.0",
+    "next": "13.4.12",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "tailwindcss": "3.4.3",
-    "typescript": "5.4.5"
+    "react-hook-form": "^7.51.3",
+    "react-hot-toast": "^2.4.1",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "5.4.5",
+    "zod": "^3.23.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "prisma": "^5.13.0",
+    "tailwindcss": "^3.4.3"
   }
 }
