--- a/package.json
+++ b/package.json
@@ -12,26 +12,32 @@
     "@clerk/nextjs": "^4.23.5",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.13.0",
+    "@prisma/studio": "^0.500.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.12.7",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "@uploadthing/react": "^6.5.1",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "0.2.0",
     "eslint": "8.57.0",
     "eslint-config-next": "13.4.12",
     "lucide-react": "^0.376.0",
     "next": "13.4.12",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.4.5",
+    "uploadthing": "^6.10.1",
     "zod": "^3.23.5"
   },
   "devDependencies": {
